--- a/sistem.html
+++ b/sistem.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sistem Pakar - Rekomendasi Jurusan</title>
+    <title>Sistem Rekomendasi Jurusan</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,7 +15,8 @@
 
     <main>
         <form id="expert-form">
-            <p class="instructions">Silakan centang pernyataan yang paling sesuai dengan diri Anda. Anda boleh memilih sebanyak mungkin.</p>
+            <p class="instructions">Silakan centang pernyataan yang paling sesuai dengan diri Anda.
+                <br> Anda boleh memilih sebanyak mungkin.</p>
 
             <fieldset>
                 <legend>Kecerdasan Verbal (Linguistik)</legend>
